Add user account deletion
- Now an user can delete its account. If deleted, all his contacts
and account info are destroyed in accord with the LGPD.

- The user must confirm its password before deleting its account,
if the password is wrong, the account will not be deleted.

- The user must be authenticated to delete its account.
